--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@
 
 
 /* ---- Base Rules ---- */
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: rgb(136,203,171);
     background: linear-gradient(0deg, rgba(136,203,171,1) 0%, rgba(0,13,60,1) 100%);
@@ -86,6 +90,12 @@ section {
 .navbar__menu .menu__link:hover {
     background: #333;
     color: #fff;
+    transition: ease 0.3s all;
+}
+
+.active {
+    background: #333;
+    color: rgb(136,203,171) !important;
     transition: ease 0.3s all;
 }
 
